refactor(export): remove additional formats and gzip compression